# suitware

./: .gitignore  Cargo.toml  README.org  flake.nix  shell.nix
crates/aparan/: Cargo.toml
crates/aparan-macros/: Cargo.toml
crates/aparan-macros/examples/: node.rs  worker.rs
crates/aparan-macros/src/: lib.rs
crates/aparan/examples/: basic-worker.rs  receiver-sender.rs
crates/aparan/src/: lib.rs
crates/suitware/: Cargo.toml  build.rs
crates/suitware-hud/: Cargo.toml
crates/suitware-hud/src/: app.rs  lib.rs  main.rs
crates/suitware-raa/: Cargo.toml
crates/suitware-raa/src/: main.rs  temperature.rs
crates/suitware-raa/ui/: main.60
crates/suitware-server/: Cargo.toml  build.rs
crates/suitware-server/proto/: temperature.proto
crates/suitware-server/src/: lib.rs  main.rs
crates/suitware-server/src/systems/: mod.rs  temperature.rs
crates/suitware-synthesis/: Cargo.toml
crates/suitware-synthesis/src/: lib.rs  wav.rs
crates/suitware/examples/: basic.rs
crates/suitware/protocol/: mqttd.conf
crates/suitware/src/: client.rs  lib.rs  main.rs  server.rs
crates/suitware/src/plugins/: mod.rs  mqtt.rs
crates/suitware/src/systems/: temperature.rs
dev/suitware-sim/: Cargo.toml  build.rs
dev/suitware-sim/proto/: temperature.proto
dev/suitware-sim/src/: main.rs  protocol.rs
dev/suitware-synthesis/: Cargo.toml
dev/suitware-synthesis/src/: lib.rs
docs/contributing/: README.org
libs/suitware-hal/: Cargo.toml
libs/suitware-hal/src/: lib.rs
libs/suitware-hal/src/dev/: temperature.rs~
libs/suitware-hal/src/prod/: temperature.rs
nix/: repl.nix
