[package]
name = "suitware-hud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.15.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
debug = true
opt-level = 2 # fast and small wasm

[package.metadata.nix]
build = true
