[package]
name = "suitware-hud"
version = "0.1.0"
edition = "2021"

[dependencies]
suitware = { path = "../suitware-server", package = "suitware-server" }

druid = "0.7.0"
tonic = "0.6"
async-stream = "0.3.0"
tokio = {version = "1.0", features = ["time"]}

color-eyre = "0.5"

[package.metadata.nix]
build = true
