[package]
name = "suitware-raa"
version = "0.1.0"
edition = "2021"

[dependencies]
sixtyfps = "0.1.5"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }

rumqttc = "0.6"
mqttbytes = "0.4"
bytes = "1.0"
bincode = "1.3"
bincode_derive = "2.0.0-alpha.2"

color-eyre = { version = "0.5", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
sixtyfps-build = "0.1.5"