[package]
name = "suitware-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hal = { path = "../../libs/suitware-hal", package = "suitware-hal" }

tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.6"
vergen = "5"

[profile.release]
debug = true

[package.metadata.nix]
build = true
