[package]
name = "suitware-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hal = { path = "../../libs/suitware-hal", package = "suitware-hal" }

tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = {version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3"

color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0.51"

[build-dependencies]
tonic-build = "0.6"
vergen = "5"

[package.metadata.nix]
build = true
