[package]
name = "suitware-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = {version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3"

color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

bevy = { version = "0.5", default-features = false, features = ["x11", "render", "bevy_wgpu", "bevy_winit"] }
bevy-inspector-egui = "0.6.1"

[build-dependencies]
tonic-build = "0.6"